# zenoh-flow

./: .gitignore  Cargo.toml  run-bench.sh  serialization-bench-parse.py  serialization-process.py
.github/workflows/: release.yml
cargo-zenoh-flow/: Cargo.toml
zenoh-flow/: Cargo.toml
zenoh-flow-daemon/etc/: runtime.yaml
zenoh-flow-daemon/src/: daemon.rs  main.rs
zenoh-flow-derive/src/: lib.rs
zenoh-flow-examples/examples/: simple-pipeline.rs  video-pipeline.rs
zenoh-flow-examples/graphs/: simple_pipeline.yaml
zenoh-flow-registry/: Cargo.toml
zenoh-flow-registry-plugin/: Cargo.toml
zenoh-flow-registry-plugin/etc/: registry-config.yaml
zenoh-flow-registry-plugin/src/: lib.rs
zenoh-flow-registry/src/: lib.rs  registry.rs
zenoh-flow/benches/: serialization_bench.rs  serialization_bench_empty.rs
zenoh-flow/src/: error.rs  lib.rs  types.rs
zenoh-flow/src/model/: mod.rs
zenoh-flow/src/registry/: mod.rs
zenoh-flow/src/runtime/: loader.rs  message.rs  message_new.rs  mod.rs  resources.rs
zenoh-flow/src/runtime/dataflow/instance/runners/: operator.rs
zenoh-flow/src/runtime/graph/: mod.rs
zenoh-flow/src/runtime/runners/: connector.rs  mod.rs  operator.rs  sink.rs  source.rs
