[package]
name = "zenoh-flow-registry-plugin"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


async-std = { version = "=1.9.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master"}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
clap = "2"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
flume = "0.10"

zenoh-flow = {path = "../zenoh-flow"}
zenoh-flow-registry = {path = "../zenoh-flow-registry"}

[lib]
name = "zplugin_zenoh_flow_registry"
crate-type = ["cdylib"]